feat: Update styles and layout for improved responsiveness and user experience

--- a/Revisao/style.css
+++ b/Revisao/style.css
@@ -1493,6 +1493,7 @@ nav.breadcrumb-nav a {
         flex-direction: row;
         gap: 8px;
         overflow-x: auto;
+        max-width: 100vh;
     }
 
     #imagens .imageWrapper {
