--- a/css/styleSidebar.css
+++ b/css/styleSidebar.css
@@ -10,7 +10,7 @@ body {
     height: 100vh;
     background-color: white;
     color: black;
-    /* position: fixed; */
+    position: fixed;
     top: 0;
     left: 0;
     display: flex;
@@ -19,7 +19,7 @@ body {
     transition: width 0.3s ease;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
     font-size: 12px;
-    /* z-index: 1000; */
+    z-index: 1000;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -49,8 +49,12 @@ body {
 }
 
 .sidebar.mini {
-    width: 200px;
+    width: 60px;
     overflow-y: hidden;
+}
+
+.sidebar.mini #gif {
+    display: none;
 }
 
 .sidebar.mini a {
@@ -67,6 +71,11 @@ body {
 
 .sidebar.mini ul.division {
     border-top: 1px solid black;
+}
+
+/* Remover borda do primeiro grupo (division) no modo mini */
+.sidebar.mini ul.division:first-of-type {
+    border-top: none;
 }
 
 .sidebar ul {
@@ -170,5 +179,9 @@ button#menuButton:active {
 
     .sidebar.mini ul.division {
         border-top: 1px solid white;
+    }
+
+    .sidebar.mini ul.division:first-of-type {
+        border-top: none;
     }
 }
